2002-10-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Removed some nested use of strncmp with simple
	  switch/case instead in parse_G_code.
	* src/gerber.c: Added an extra check so RS274D doesn't casue
	  segfault. Discovered by Jukka Marin. Thanks.

2002-10-24  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Played with clipping. Allocated
	  pixmap is now same size as window. GTK does all clipping (we
	  could optimize this somewhat with "object" bounding boxes). This
	  makes it possible to zoom where no gerbv has zoomed before.
	  Some interesting effects can be found by zooming in a lot.

-- Release 0.0.10 debian release 2 --

2002-10-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c, src/gerb_file.[hc], src/gerber.c, src/gerbv.c:
	  Alot of abuse using EOF(-1) when char actually is unsigned
	  caused a lot of warnings when Debian build system tried to
	  build it for a couple of platforms.

2002-10-14  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Activate millimeters in unit menu if this
	  is the default unit.
	  (update_statusbar()): Check that statusbar has been
	  created before trying to set text to it. This eliminates
	  an annoying GTK assertion.

-- Release 0.0.10 --

2002-10-13   Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated version to 0.0.10

2002-10-11  Anders Eriksson  <anders@umunet.org>

	* configure.in, acconfig.h, src/gerbv.c: Added configure-option
	  to change default unit for status bar to millimeters instead
	  of the built-in default of mils.

2002-10-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: The undefined aperture fix below is, in princip,
	  only valid if aperture type != from aperture macro.

2002-10-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: If aperture was undefined (as in polygon outline)
	  it caused a segfault in min-max routine. Closes bug #619652.

	* man/gerbv.1.in: Added blurb about the new command line 